Serializable, Parcelable 정리

--- a/Ideas/직렬화.md
+++ b/Ideas/직렬화.md
@@ -110,4 +110,12 @@
   }
   ```
 
-  
+
+
+### Serializable vs Parcelable
+
+|                         Serializable                         |                          Parcelable                          |
+| :----------------------------------------------------------: | :----------------------------------------------------------: |
+|                     표준 자바 인터페이스                     |                  안드로이드 SDK 인터페이스                   |
+|                implements Serializable로 구현                |         implements Parcelable + 오버라이딩으로 구현          |
+| <span style="color:blue">구현 쉬움</span> <span style="color:red">성능 낮음</span> | <span style="color:red">구현 복잡</span> <span style="color:blue">성능 좋음</span> |
