--- a/MyKakaoLogin/app/src/main/res/values/strings.xml
+++ b/MyKakaoLogin/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyKakaoLogin</string>
+
+<!--    ### 카카오키-->
+    <string name="kakao_app_key">a84e4bea638ea9b03e51c9477cfb6f81</string>
 </resources>
