21-02-01 Send KakaoTalk Msg
카카오 SDK 설정

--- a/MyKakaoMsg/app/src/main/res/values/strings.xml
+++ b/MyKakaoMsg/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyKakaoMsg</string>
+    <string name="kakao_app_key">5eb5fd1b19cb66195437d9203acba55a</string>
 </resources>
